--- a/src_chrome/empty.html
+++ b/src_chrome/empty.html
@@ -1,1 +1,5 @@
+<!--
+	An empty background page makes the popup open faster.
+	See: http://stackoverflow.com/questions/26276815/my-chrome-extension-popup-opens-after-a-few-seconds-its-slow-compared-to-other
+-->
 <html></html>
