Update to manifest v3

--- a/src_chrome/popup.html
+++ b/src_chrome/popup.html
@@ -27,6 +27,6 @@
       <output id="slider-value" for="slider">20%</output>
     </form>
 
-    <script src="popup.js"></script>
+    <script src="popup.js" type="module"></script>
   </body>
 </html>
